@@ -35,19 +35,16 @@ class SVGInlineTextBox;
 
 class SVGRootInlineBox final : public RootInlineBox {
 public:
-    SVGRootInlineBox(RenderSVGText&);
+    explicit SVGRootInlineBox(RenderSVGText&);
 
     RenderSVGText& renderSVGText();
 
-    virtual float virtualLogicalHeight() const { return m_logicalHeight; }
+    virtual float virtualLogicalHeight() const override { return m_logicalHeight; }
     void setLogicalHeight(float height) { m_logicalHeight = height; }
 
-    virtual void paint(PaintInfo&, const LayoutPoint&, LayoutUnit lineTop, LayoutUnit lineBottom);
+    virtual void paint(PaintInfo&, const LayoutPoint&, LayoutUnit lineTop, LayoutUnit lineBottom) override;
 
     void computePerCharacterLayoutInformation();
-
-    virtual FloatRect objectBoundingBox() const { return FloatRect(); }
-    virtual FloatRect repaintRectInLocalCoordinates() const { return FloatRect(); }
 
     InlineBox* closestLeafChildForPosition(const LayoutPoint&);
 
