@@ -1,3 +1,14 @@
+2014-02-02  Andreas Kling  <akling@apple.com>
+
+        Minor SVGRootInlineBox cleanup.
+        <https://webkit.org/b/128094>
+
+        Remove two virtual functions and sprinkle some missing overrides.
+
+        Reviewed by Anders Carlsson.
+
+        * rendering/svg/SVGRootInlineBox.h:
+
 2014-03-03  David Kilzer  <ddkilzer@apple.com>
 
         SVGPropertyTearOffs should detachChildren before deleting its value.
